[package]
name = "pomobar-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pomobar"
path = "src/bin/server.rs"

[[bin]]
name = "pomobar-cli"
path = "src/bin/client.rs"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.26", features = ["cargo"] }
notify-rust = "4.11.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.1", features = ["v4", "fast-rng"] }
rodio = "0.17.2"
